Archive2/11/aba0a92f2d85de/output
main.cpp:1:15: error: 'memoization' was not declared in this scope
     auto it = memoization.begin();
               ^
main.cpp:2:2: error: expected unqualified-id before 'while'
  while (it != memoization.end()){
  ^
